tests/paczka1/fuzzy1/48513459.err
Error in line 5: 6LrbV S934 92,6
Error in line 14: E9mD S200 96,9
Error in line 11: 6LrbV A611 54,2
Error in line 9: cgb5s S200 18,1
Error in line 40: ehXotKcrBY A611 190,81
